Small fix and CSS refactor

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 </div>
 
                 <div class="inputs">
-                    <label for="extra">Extra Value/Decoration/Etc</label>
-                    <input type="text" id="extra" placeholder="Extra value $$">
+                    <label for="extra">Extra Value</label>
+                    <input type="text" id="extra" placeholder="Extra value in R$">
                 </div>
 
                 <label class="inputs">Product usage</label>
